--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +7,6 @@
 </head>
 <body>
     <h1>Welcome to NGINX in Docker Swarm!</h1>
-    <p>Environment Variable: {{ MESSAGE }}</p>
+    <p>Environment Variable: {{ .Env.MESSAGE }}</p>
 </body>
 </html>
